--- a/AbbyWeb/Pages/Admin/Categories/Edit.cshtml
+++ b/AbbyWeb/Pages/Admin/Categories/Edit.cshtml
@@ -1,13 +1,14 @@
 ﻿@page
-@model AbbyWeb.Pages.Categories.CreateModel
+@model AbbyWeb.Pages.Admin.Categories.EditModel
 
 <form method="post">
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <h2>Create</h2>
+                <h2>Update</h2>
             </div>
         </div> 
+        <input hidden asp-for="Category.Id" />
         <div class="mb-3">
             <label asp-for="Category.Name"></label>
             <input asp-for="@Model.Category.Name" />
@@ -19,7 +20,7 @@
             <span asp-validation-for="Category.DisplayOrder" class="alert-danger"></span>
         </div>
 
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Update</button>
     </div>
 </form>
 
